--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,7 +33,7 @@ body {
 
     input[type="text"] {
       background-color: $primary-color;
-      width: 75%;
+      width: 80%;
       color: white;
       height: 2rem;
       font-size: 1.2rem;
@@ -53,14 +53,14 @@ body {
       border-radius: 0.2rem;
       margin-left: 1rem;
       height: 2.5rem;
-      width: 20%;
+      width: 15%;
     }
   }
 
   .results {
     .suggestions {
       margin-top: 1rem;
-      width: 75%;
+      width: 80%;
       background-color: darken($primary-color, 10%);
 
       li {
@@ -69,6 +69,24 @@ body {
         color: white;
         font-style: italic;
         border-bottom: 0.2rem solid white;
+        position: relative;
+
+        span.pop {
+          background-color: darken($primary-color, 5%);
+          position: absolute;
+          right: 0.5rem;
+          top: 0.5rem;
+          text-align: right;
+          padding: 0.5rem;
+          color: white;
+        }
+      }
+
+      .high {
+        color: $primary-color;
+        background-color: white;
+        font-weight: bold;
+        text-transform: capitalize;
       }
     }
   }
